@@ -6,7 +6,7 @@ gem 'rack' #, '1.3.5'
 gem 'rack-cache'
 gem 'rake' #, '0.9.2.2'
 gem 'rails', '3.2.2'
-gem 'bundler', '>= 1.0.0'
+gem 'bundler', '>= 1.1.0'
 gem 'thin', :require => false
 
 ### Database Adapter
