@@ -12,4 +12,14 @@ module CarrierWave
       end
     end
   end
+  # Change quality on mini_magick
+  module MiniMagick
+    def quality(percentage)
+      manipulate! do |img|
+        img.quality(percentage.to_s)
+        img = yield(img) if block_given?
+        img
+      end
+    end
+  end
 end
